# GC-OrbitFit

./: .gitignore  LICENSE  README.md  astrometry_NACO.csv  astrometry_SHARP.csv  example.ipynb  pyproject.toml  tasks.py  velocity_NACO.csv  velocity_OSIRIS.csv  velocity_SINFONI.csv
.github/workflows/: test.yml
backup/: Makefile  README.md  data.csv  problem.c
gc_orbitfit/: __init__.py  constants.py  data.py  fitting.py  gp_tools.py  mcmc.py  models.py  plotting.py  priors.py  sampling.py
orbfit/: __init__.py  constants.py  fitting.py  gp_tools.py  loading.py  mcmc.py  models.py  plotting.py  priors.py
tests/: conftest.py  test_fitting.py  test_mcmc.py  test_sampling.py
