[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gc-orbitfit"
version = "0.1.0"
description = "A tool for fitting stellar orbits in the Galactic Center."
license="MIT"
authors = ["Philipp Plewa <pmplewa@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/pmplewa/GC-OrbitFit"
classifiers = ["Intended Audience :: Developers", "Operating System :: OS Independent"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
astropy = "^5.2"
corner = "^2.2"
emcee = "^3.1"
george = "^0.4"
h5py = "^3.8"
matplotlib = "^3.6"
multiprocess = "^0.70"
numpy = "^1.22"
pandas = "^1.5"
rebound = "^3.23"
reboundx = "^3.9"
scipy = "^1.9"
tqdm = "^4.64"

[tool.poetry.group.dev.dependencies]
black = "22.3.*"
invoke = "1.7.*"
isort = "5.10.*"
mypy= "==0.990"
pylint = "2.13.*"
pytest = "7.2.*"
pytest-cov = "4.0.*"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["venv"]

[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "corner.*",
    "emcee.*",
    "george.*",
    "invoke.*",
    "matplotlib.*",
    "multiprocess.*",
    "pandas.*",
    "rebound.*",
    "reboundx.*",
    "scipy.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = """
duplicate-code,
invalid-name,
missing-docstring,
pointless-string-statement,
"""
